--- a/index.html
+++ b/index.html
@@ -12,47 +12,47 @@
     <div class="top-container">
       <img class="cloud-top" src="images/cloud.png" alt="">
 
-      <h1>Shubham Khandelwal</h1>
-      <p>I am a Chartered Accountant</p>
+      <h1>I'm Shubham</h1>
+      <h2>an accountant</h2>
       <img class="cloud-bottom" src="images/cloud.png" alt="">
       <img class="mountain" src="images/mountain.png" alt="">
 
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="" alt="">
+        <img src="images/Shubham.jpeg" alt="">
         <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p>I am a Qualified Chartered Accountant and an Auatralian Certified Public Accountant.</p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <img class="" src="images/computer.png" alt="">
+          <h3>Programmer Accountant</h3>
+          <p>I can code and I can do accounting.</p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <img class="" src="images/chillies.png" alt="">
+          <h3>A Cook</h3>
+          <p>I can cook, excuses!! As they say, never believe a Cook.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <h3>Alawys available for any kind of help.</h3>
+        <p>Write to me on my email, I am equally available on Linkedin and Twitter.</p>
+        <a class="btn" href="mailto:shubham.khandelwal@hotmail.com">CONTACT ME</a>
       </div>
     </div>
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2018 Name Surname.</p>
+      <a class="footer-link" href="https://www.linkedin.com/shubhamkhandelwal/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/shubham_fingage">Twitter</a>
+      <a class="footer-link" href="https://www.quora.com/profile/Shubham-Khandelwal-205">Website</a>
+      <p>© 2020 Shubham Khandelwal.</p>
     </div>
 
 
